Bug 1420648 - Ensure WebRender computes the snapped image decode size the same as the fallback path. r=tnikkel