gfx/layers/wr/StackingContextHelper.h
@@ -68,6 +68,11 @@ public:
   // Export the inherited scale
   gfx::Size GetInheritedScale() const { return mScale; }
 
+  const gfx::Matrix& GetInheritedTransform() const
+  {
+    return mInheritedTransform;
+  }
+
   bool IsBackfaceVisible() const { return mTransform.IsBackfaceVisible(); }
 
 private:
@@ -75,6 +80,7 @@ private:
   LayoutDevicePoint mOrigin;
   gfx::Matrix4x4 mTransform;
   gfx::Size mScale;
+  gfx::Matrix mInheritedTransform;
 };
 
 } // namespace layers
